--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <input type="submit" value="ورود">
             </div>
         </form>
+        <div class="forgot">
+            <a href="#" target="_blank" rel="noopener noreferrer">پسورد را فراموش کرده ام.</a>
+        </div>
     </div>
 </body>
 </html>
